# 24fire-api-cli

./: .env  .env-example  .gitignore  BUILD.md  CONTRIBUTIONS.md  README.md  launcher.py  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: build-exe-flexible.yml  build-exe.yml  build-optimized.yml  build.yml
