[tool.poetry]
name = "24fire-api-cli"
version = "1.0.0"
description = "CLI tool for managing 24Fire services"
authors = ["SyncWide Solutions <contact@syncwide.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.8.1,<3.13"
requests = "^2.31.0"
python-dotenv = "^1.0.0"

[tool.poetry.group.dev.dependencies]
pyinstaller = "^6.0.0"
pytest = "^8.3.5"
black = "^23.0.0"
flake8 = "^6.0.0"
mypy = "^1.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
